--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ coverage.*
 profile.cov
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
