--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -26,7 +26,8 @@ builds:
     ldflags:
       - -s -w
 archives:
-  - formats: [tar.gz]
+  - format: tar.gz
+    # formats: [tar.gz]
     # this name template makes the OS and Arch compatible with the results of `uname`.
     name_template: >-
       {{ .ProjectName }}_ {{- title .Os }}_ {{- if eq .Arch "amd64" }}x86_64 {{- else if eq .Arch "386" }}i386 {{- else }}{{ .Arch }}{{ end }} {{- if .Arm }}v{{ .Arm }}{{ end }}
